correct Plugin definition

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 !vim/bundle/Vundle.vim/*
-!vim/bundle/
 !vim/bin/
 !vin/backup/
 
-#vim/bundle/*
-#vim/doc/*
-#vim/bin/*
+vim/bundle/*
+vim/doc/*
+vim/bin/*
 vim/.netrwhist
 vim/backup/*.s*
 vim/backup/.netrwhis*
