update vimrcwith some ale improvements

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -1,12 +1,46 @@
+# require: rubocop-rspec
 
 Metrics/LineLength:
   Max: 160
 
 Metrics/MethodLength:
+  CountComments: false 
   Max: 50
 
+Layout/DotPosition:
+  Enabled: true
+  EnforcedStyle: trailing
 
 Style/RedundantSelf:
   Description: "Don't use self where it's not needed."
   StyleGuide: '#no-self-unless-required'
   Enabled: false
+
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+
+Layout/AlignHash:
+  EnforcedColonStyle: table                                                                                                 
+
+Layout/TrailingBlankLines:
+  EnforcedStyle: final_blank_line
+
+Layout/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
+
+Style/StringLiterals:
+  Description: 'Checks if uses of quotes match the configured preference.'
+  StyleGuide: '#consistent-string-literals'
+  Enabled: true
+  VersionAdded: '0.9'
+  VersionChanged: '0.36'
+  EnforcedStyle: double_quotes
+  SupportedStyles:
+    - single_quotes
+    - double_quotes
+  # If `true`, strings which span multiple lines using `\` for continuation must
+  # use the same type of quotes on each line.
+  ConsistentQuotesInMultiline: false
+  
+Naming/MemoizedInstanceVariableName:
+  EnforcedStyleForLeadingUnderscores: required
