add bash addon for arduino cli, add starship config and update tmux style as  well as add support local plugin specification (example file with codeium)

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,10 +16,6 @@ bind M \
   set -g mouse-select-pane off \;\
   set -g mouse-select-window off \;\
   display 'Mouse: OFF'
-#setw -g window-status-bg black
-#setw -g window-status-current-fg green
-#setw -g window-status-alert-attr default
-#setw -g window-status-alert-fg yellow
 
 bind T \
   set-option -g status-position top
@@ -28,32 +24,18 @@ bind t \
   set-option -g status-position bottom
 
 set-option -g status-position top
-#set-option -g status-utf8 on
-#set-option -g status-justify centre
 set-option -g status-justify left
 set-option -g status-bg black
 set-option -g status-fg white
 
 set-option -g status-left-length 40
 
-#set -g status-left '#[bg=green]#[fg=red] #H #[default]#[fg=green] #S #[fg=white]' 
-#set -g window-status-format "#[fg=black,bg=colour8] #I #W "
-#set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=white,bg=colour39,noreverse,bold] #I #[fg=black]#[fg=white] #W #[fg=colour39,bg=colour234,nobold]"
-#set -g status-right '#[fg=green] #[bg=green] #[fg=blue]%Y-%m-%d #[default]'
-#set -g status-left '#[bg=colour190]#[fg=black]#[bold] #H #[default]#[fg=colour190] #[fg=black]#S #[fg=green]#[bg=colour231]'
-set -g status-left '#[bg=colour190]#[fg=black]#[bold] #H #[default]#[bg=colour231]#[fg=colour190]'
-#set -g window-status-format "#[bg=colour231]#[fg=colour257]#[fg=colour231]#[bg=colour257] #I #[bg=colour231]#[fg=colour247]#W "
-set -g window-status-format "#[fg=colour231]#[bg=colour247]#[fg=colour231,bg=colour247,noreverse,bold]#I#[fg=black]#[fg=colour231] #W #[fg=colour247]#[bg=colour231]#[nobold]"
-set -g window-status-current-format "#[fg=colour231]#[bg=colour39]#[fg=colour231,bg=colour39,noreverse,bold]#I#[fg=black]#[fg=colour231] #W #[fg=colour39]#[bg=colour231]#[nobold]"
-set -g status-right '#[fg=colour130]#[bg=colour231] #[bg=colour130] #[fg=black]%Y-%m-%d - %H:%M:%S #[default]'
-set -g status-bg colour231
-set -g status-fg colour255
 
 set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-unbind C-b
-set -g prefix C-a
+#unbind C-b
+#set -g prefix C-a
 setw -g mode-keys vi
 set -g status-keys vi
 #bind-key -t vi-edit Up   history-up
@@ -72,7 +54,10 @@ set -sg escape-time 0
 set -g @prefix_highlight_fg black
 set -g @prefix_highlight_bg brightcyan
 
-set -g status-bg black
+set-option -g status-style bg=default
+
+#set -g status-bg colour231
+#set -g status-fg colour255
 set -g status-fg white
 
 #+-------+
@@ -84,19 +69,19 @@ set -g display-panes-active-colour brightblack
 #+------------+
 setw -g clock-mode-colour cyan
 
-set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
+set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=default]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
 set -g @prefix_highlight_output_suffix ""
-set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
+set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=default,bold"
 
 #+--------+
 #+ Status +
 #+--------+
 #+--- Bars ---+
 #set -g status-left "#[fg=black,bg=blue,bold] #S#[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
+set -g status-left "#[fg=black,bg=colour235,bold] #S #[fg=colour235,bg=default,nobold,noitalics,nounderscore]"
+set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=default,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=colour235,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=colour235,bold] #H "
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=default,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #[fg=black,bg=blue]#I #[fg=black,bg=blue,nobold,noitalics,nounderscore] #[fg=black,bg=blue]#W #F #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
